--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.mjs"
+    "start:dev": "nodemon app.mjs",
+    "start":"node app.mjs"
   },
   "keywords": [],
   "author": "",
